Fix sidebar chat titles: change text-align from justify to left

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,7 +77,7 @@
   }
 
   p, li, blockquote {
-    text-align: justify;
+    text-align: left;
   }
 }
 
